# tetote

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  SECURITY.md  manage.py  package-lock.json  package.json  pyproject.toml  shop.test.js  vitest.setup.js
.github/workflows/: ci-cd.yml  deploy.yml  test.yml
assets/css/: input.css
assets/js/: home.js  main.js  product-detail.js  shop.js
blog/: admin.py  models.py  sitemaps.py  tests.py  translation.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blogpage_body.py  0002_alter_blogpost_content_alter_blogpost_content_de_and_more.py  0002_delete_blogindexpage.py  0002_post_content_de_post_content_en_post_content_fr_and_more.py  0003_blogpost_cover_image.py  0003_remove_blogindexpage_intro.py
integrations/: tests.py  views.py
news/: admin.py  models.py  tests.py  translation.py  urls.py  views.py
news/migrations/: 0001_initial.py  0002_alter_newsitem_content_alter_newsitem_content_de_and_more.py
shop/: admin.py  context_processors.py  middleware.py  models.py  playwright_tests.py  sitemaps.py  test_analytics.py  test_brand_detail.py  test_contact.py  test_content_tags.py  test_filter_sorting.py  test_integration.py  test_maintenance.py  test_seo.py  tests.py  translation.py  urls.py  views.py
shop/migrations/: 0001_initial.py  0002_brand_description_de_brand_description_en_and_more.py  0003_product_stripe_name.py  0004_product_public.py  0005_alter_product_public.py  0010_storesettings.py  (+23 more)
templates/: 404.html  base.html
tetote/: asgi.py  settings.py  urls.py  wsgi.py
(+83 files in other folders)
